@@ -20,7 +20,6 @@
  * $Id$
  */
 ?>
-<?php /* $Id$ */ ?>
 
 <?php
 	insertFormJS('config','available_lang[]');
