@@ -20,7 +20,6 @@
  * $Id$
  */
 ?>
-<?php /* $Id$ */ ?>
 <?php 
 
 	@include(dirname(dirname(__FILE__)) . '/config.php'); 
