@@ -20,7 +20,6 @@
  * $Id$
  */
 ?>
-<?php /* $Id$ */ ?>
 <?php
 
 function evenOdd_row($fields, $evenOdd) {
