@@ -21,7 +21,6 @@
  * $Id$
  */
 ?>
-<?php /* $Id$ */ ?>
 
 <?php
 
