@@ -1,3 +1,8 @@
+2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b87
+
+	* Change: remove doubled cvs id in setup/*
+		  (Thanks to Vallimar)
+
 2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b86
 
 	* Bugfix: Now correctly fixed #907950.
